<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.example.android.bitcoinquiz.MainActivity">


        <TextView
            android:id="@+id/textView"
            android:text="@string/details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/textDetails1"
            android:text="@string/details_content_L1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/textDetails2"
            android:text="@string/details_content_L2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/textQuestion1"
            android:text="@string/question1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <CheckBox
            android:id="@+id/digital_Q1_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Q1_answer1"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/digital_Q1_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Q1_answer2"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/digital_Q1_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Q1_answer3"
            android:textSize="16sp" />



    </LinearLayout>

</ScrollView>



